Responsive bug on iPhone 7 fixed.

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ html, body {
 }
 
 header {
-  
-  width: 90%;
+  position: fixed;
+  width: 99%;
   height: 100px;
 
   display: flex;
@@ -274,25 +274,6 @@ header nav li a {
 
 .card-button button:hover {
   background: rgb(29, 74, 119);
-}
-
-header {
-  position: absolute;
-  z-index: 2;
-}
-
-@media
-only screen and (-webkit-min-device-pixel-ratio: 1.5),
-only screen and (-o-min-device-pixel-ratio: 3/2),
-only screen and (min--moz-device-pixel-ratio: 1.5),
-only screen and (min-device-pixel-ratio: 1.5){
-
-  html,
-  body{
-    width:100%;
-    overflow-x:hidden;
-  }
-
 }
 
 @media (max-width: 1200px) {
